[package]
name = "chinese-snake"
version = "0.1.0"
edition = "2021"

[dependencies]
cfg-if = "1"
winit = { version = "0.29", features = ["rwh_05"] }
wgpu = "24.0"
env_logger = "0.10"
log = "0.4"
pollster = "0.3"

bytemuck = { version = "1.16", features = [ "derive" ] }
cgmath = "*"

# glyphon = { git = "https://github.com/grovesNL/glyphon/" }
